fix navbar overlapping page content

--- a/assets/themes/lab/css/style.scss
+++ b/assets/themes/lab/css/style.scss
@@ -19,7 +19,7 @@ body {
 }
 
 body > .container {
-	padding-top: 50px; /* to prevent navbar overlap */
+	padding-top: 100px; /* to prevent navbar overlap */
 	font-family: $font-stack;
 	color: $primary-color;
 	font-weight: $font-weight-base;
